# simple-lc-chatbot

./: README.md  pyproject.toml  streamlit_app.py
config/: settings.py
services/: chat_service.py
